option('tests', type: 'feature', description: 'Build tests')
option('static-bifurcation', type: 'string', value: '/usr/share/google-ipmi-sys/bifurcation.json', description: 'Path to Static Bifurcation Json config')
option('bm-signal-path', type: 'string', value: '/tmp/BMReady.flag', description: 'Path to the flag to indicate that BM mode is ready')
